--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-expo": "^0.20.1",
     "expo": "~50.0.2",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "~12.8.1",
     "react": "18.2.0",
     "react-native": "0.73.2"
   },
