--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo": "~50.0.2",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.73.2"
   },
   "devDependencies": {
