--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-application": "^5.8.3",
     "expo-auth-session": "~5.4.0",
     "expo-random": "~13.6.0",
+    "expo-secure-store": "^12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.1",
     "react": "^18.2.0",
