--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.1",
+    "@react-navigation/native": "^6.1.9",
     "expo": "~50.0.2",
     "expo-application": "^5.8.3",
     "expo-auth-session": "~5.4.0",
