--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "expo-web-browser": "~12.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
