--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~50.0.2",
     "expo-application": "^5.8.3",
     "expo-auth-session": "~5.4.0",
+    "expo-font": "~11.10.2",
     "expo-random": "~13.6.0",
     "expo-secure-store": "^12.8.1",
     "expo-status-bar": "~1.11.1",
