--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.1",
     "expo": "~50.0.2",
+    "expo-application": "^5.8.3",
+    "expo-auth-session": "~5.4.0",
+    "expo-random": "~13.6.0",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.1",
     "react": "^18.2.0",
